--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="no">
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
-    <title>Jesse Lee's "Mustang GT 5.0 SuperCharged" HTML5 Engine</title>
+    <title>T-Crisis V Firefox 110% AI</title>
     <!--
 
     M.I.T. License:
@@ -49,7 +49,7 @@
      ..............................................................................
                                                        TM
                       ' 'T-Crisis V "Firefox" 110% A.I.' '
-                             Retail 3 - Beta Final
+                        Retail Final - Release Candidate
              "The Russian's Made It, Do You Have The Skills To Steal It?"
      ..............................................................................
 
@@ -77,6 +77,6 @@
 <div style="font-family: HighlandGothicFLF, sans-serif;">
 </div>
 
-<!-- "A 110% By Team: JesseLeePalser.itch.io" -->
+<!-- "A 110% By Team: JesseLeePalser.itch.io !" -->
 
 </body>
